--- a/Coucou.html
+++ b/Coucou.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8/">
+		<meta charset="utf-8"/>
 		<title> Salut </title>
 	</head>
 	<body>
-		<p>Je suis un gâteau de riz</p>
+		<h1>Bonjour</h1> <!-- Ceci est un titre -->		
+		<p>Je suis un <strong>gâteau de riz</strong></p> <!-- Ceci est un paragraphe -->
+		<br/>
+		<p><mark>Ingrédients :</mark></p> <!-- Ceci est un autre paragraphe -->
+		<ul>
+			<li> Riz</li>
+			<li> Poisson</li>
+			<li> Algues</li>
+		</ul>
 	</body>
 </html>
