J'ai ajouté une belle petite image

--- a/Coucou.html
+++ b/Coucou.html
@@ -5,7 +5,8 @@
 		<title> Salut </title>
 	</head>
 	<body>
-		<h1>Bonjour</h1> <!-- Ceci est un titre -->		
+		<h1>Bonjour</h1> <!-- Ceci est un titre -->
+		<img src="Onigiri-Triangle.jpg" alt="Onigiri" style="width:304px;height:228px;">		
 		<p>Je suis un <strong>gâteau de riz</strong></p> <!-- Ceci est un paragraphe -->
 		<br/>
 		<p><mark>Ingrédients :</mark></p> <!-- Ceci est un autre paragraphe -->
