--- a/Coucou.html
+++ b/Coucou.html
@@ -6,14 +6,21 @@
 	</head>
 	<body>
 		<h1>Bonjour</h1> <!-- Ceci est un titre -->
-		<img src="Onigiri-Triangle.jpg" alt="Onigiri" style="width:304px;height:228px;">		
-		<p>Je suis un <strong>gâteau de riz</strong></p> <!-- Ceci est un paragraphe -->
-		<br/>
-		<p><mark>Ingrédients :</mark></p> <!-- Ceci est un autre paragraphe -->
-		<ul>
-			<li> Riz</li>
-			<li> Poisson</li>
-			<li> Algues</li>
-		</ul>
+
+			<img src="Onigiri-Triangle.jpg" alt="Onigiri" style="width:304px;height:228px;">
+
+
+			<p>Je suis un <strong>gâteau de riz</strong></p> <!-- Ceci est un paragraphe -->
+			<br/>
+			<p><mark>Ingrédients :</mark></p> <!-- Ceci est un autre paragraphe -->
+			<ul>
+				<li> Riz</li>
+				<li> Poisson</li>
+				<li> Algues</li>
+			</ul>
+
+		<div id="footer">
+		Copyright © Henry Young
+		</div>
 	</body>
 </html>
